2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (list_jar): Changed rdamt to size_t.
	(expand_options) Changed new_argc, args_to_expand to size_t.
	Added corresponding cast.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (add_array_to_jar): Exit if write fails.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (get_next_arg): Changed len and pos to size_t.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* Makefile.am (SPLINT_FLAGS): Include headers in lib directory.
	* Makefile.in: Regenerated.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* jargrep.c (main): Use strdup instead of strcpy.
	* jartool.c (make_manifest, add_to_jar, add_file_to_jar,
	add_array_to_jar): Use strdup and strncpy instead of strcpy.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* lib/Makefile.am, lib/strdup.c, lib/string_.h
	m4/gnulib-cache.m4, m4/gnulib-comp.m4, m4/strdup.m4
	m4/string_h.m4: Imported strdup module from gnulib.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (jt_strdup): Removed.
	(get_next_arg, expand_options) Use strdup.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	*  lib/dummy.c, lib/strcasecmp.c, lib/string_.h, lib/strncasecmp.c,
	m4/strcase.m4, m4/string_h.m4: Removed.

2007-02-15  Dalibor Topic  <robilad@kaffe.org>

	* Makefile.in, aclocal.m4, config.h.in, configure,
	lib/Makefile.am, lib/Makefile.in, lib/asnprintf.c,
	lib/config.charset, lib/localcharset.c, lib/localcharset.h,
	lib/printf-args.c. lib/printf-args.h, lib/printf-parse.c,
	lib/printf-parse.h, lib/ref-add.sin, lib/ref-del.sin,
	lib/regcomp.c, lib/regex_internal.h, lib/size_max.h,
	lib/snprintf.c, lib/snprintf.h, lib/string.h,
	lib/vasnprintf.c, lib/vasnprintf.h, lib/xsize.h,
	m4/eoverflow.m4, m4/glibc21.m4, m4/gnulib-cache.m4,
	m4/gnulib-comp.m4, m4/intmax_t.m4, m4/inttypes_h.m4,
	m4/localcharset.m4, m4/longdouble.m4, m4/regex.m4,
	m4/size_max.m4, m4/snprintf.m4, m4/stdint_h.m4,
	m4/vasnprintf.m4, m4/wchar_t.m4, m4/xsize.m4: 