@@ -1,5 +1,9 @@
 2007-02-15  Dalibor Topic  <robilad@kaffe.org>
 
+	* jartool.c (consume): Changed amt and tc to size_t.
+
+2007-02-15  Dalibor Topic  <robilad@kaffe.org>
+
 	* jartool.c (list_jar): Changed rdamt to size_t.
 	(expand_options) Changed new_argc, args_to_expand to size_t.
 	Added corresponding cast.
